[package]
name = "codepad-server"
version = "0.1.0"
authors =["Sumit Kumar <sumitkanpur2005@gmail.com>"]
edition = "2021"


[dependencies]
dotenv = "0.15.0"
futures = "0.3.15"
log = "0.4.14"
operational-transform={version ="0.6.0", features = ["serde"]}
pretty_env_logger = "0.4.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.1", features = ["full"] }
tokio-stream = "0.1.6"
warp = "0.3.1"
parking_lot = "0.11.1"
